[workspace]
members = [
    "examples/simple",
    "dog",
]
resolver = "2"

[workspace.package]
rust-version = "1.83"

[workspace.dependencies]
libp2p-dog = { version = "0.1.0", path = "dog" }

# External dependencies
asynchronous-codec = "0.7.0"
bytes = "1.6"
cuckoofilter = "0.5.0"
futures = "0.3.30"
libp2p = "0.54.1"
quick-protobuf = "0.8.1"
quick-protobuf-codec = "0.3.1"
rand = "0.8"
thiserror = "2"
tokio = "1.42.0"
tracing = "0.1.37"

[workspace.lints]
rust.unreachable_pub = "warn"
clippy.used_underscore_binding = "warn"
clippy.pedantic = { level = "allow", priority = -1 }
clippy.type_complexity = "allow"
clippy.unnecessary_wraps = "warn"
clippy.manual_let_else = "warn"
clippy.dbg_macro = "warn"
