[workspace]
members = [
    "benchmark/code",
    "dog",
    "examples/simple",

    # Tests
    "dog/tests",
]
resolver = "2"

[workspace.package]
rust-version = "1.83"

[workspace.dependencies]
libp2p-dog = { version = "0.1.0", path = "dog" }

# External dependencies
async-channel = "2.3.1"
asynchronous-codec = "0.7.0"
bytes = "1.6"
either = "1.13.0"
futures = "0.3.30"
futures-timer = "3.0.3"
hex_fmt = "0.3.0"
libp2p = "0.54.1"
lru = "0.12.5"
prometheus-client = "0.23.0"
quick-protobuf = "0.8.1"
quick-protobuf-codec = "0.3.1"
rand = "0.8"
serde = "1"
thiserror = "2"
tokio = "1.42.0"
tracing = "0.1.37"
void = "1.0.2"

[workspace.lints]
rust.unreachable_pub = "warn"
clippy.used_underscore_binding = "warn"
clippy.pedantic = { level = "allow", priority = -1 }
clippy.type_complexity = "allow"
clippy.unnecessary_wraps = "warn"
clippy.manual_let_else = "warn"
clippy.dbg_macro = "warn"
