[package]
name = "libp2p-dog"
edition = "2021"
rust-version = { workspace = true }
description = "DOG protocol for libp2p"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/informalsystems/libp2p-dog"

[dependencies]
asynchronous-codec = { workspace = true } 
bytes = { workspace = true }
cuckoofilter = { workspace = true } 
futures = { workspace = true }
libp2p = { workspace = true } 
quick-protobuf = { workspace = true } 
quick-protobuf-codec = { workspace = true } 
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true } 

[lints]
workspace = true
