[package]
name = "libp2p-dog-benchmark"
edition = "2021"
rust-version = "1.83"
description = "A benchmark of the DOG protocol for libp2p"
version = "0.1.0"
license = "Apache-2.0"

[package.metadata.release]
release = false

[dependencies]
libp2p = { workspace = true, features = ["noise", "tcp", "yamux", "tokio", "macros"] }
libp2p-dog = { path = "../../dog" }
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true
