[package]
name = "libp2p-dog-benchmark"
edition = "2021"
rust-version = "1.83"
description = "A benchmark of the DOG protocol for libp2p"
version = "0.1.0"
license = "Apache-2.0"

[package.metadata.release]
release = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
libp2p = { workspace = true, features = ["noise", "tcp", "yamux", "tokio", "macros", "gossipsub"] }
libp2p-dog = { path = "../../dog" }
prometheus-client = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
