[package]
name = "libp2p-dog-tests"
edition = "2021"
rust-version = "1.83"
description = "Tests for the DOG protocol for libp2p"
version = "0.1.0"
license = "Apache-2.0"

[package.metadata.release]
release = false

[dependencies]
libp2p = { workspace = true, features = ["tcp", "noise", "yamux", "tokio", "macros"] }
libp2p-dog.workspace = true
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[lints]
workspace = true
