[package]
name = "libp2p-dog-example"
edition = "2021"
rust-version = "1.83"
description = "An example of the DOG protocol for libp2p"
version = "0.1.0"
license = "Apache-2.0"

[package.metadata.release]
release = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
libp2p = { workspace = true, features = ["noise", "tcp", "yamux", "tokio", "macros"] }
libp2p-dog = { path = "../../dog" }
prometheus-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
